[build-system]
requires = ["setuptools >= 68.2.2"]
build-backend = "setuptools.build_meta"
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "prometheus"
version = "1.0.26"
dependencies = [
  "numpy",
  "scipy",
  "dlnpyutils",
  "sep",
  "extension_helpers",
  "photutils",
  "skimage",
  "dill",
]
requires-python = ">=3.9"
#requires-python = ">=3.11"
authors = [
  {name = "David Nidever", email = "dnidever@montana.edu"},
]
maintainers = [
  {name = "David Nidever", email = "dnidever@montana.edu"}
]
description = "PSF Photometry Software"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["imaging", "photometry", "PSF"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
#Homepage = "https://example.com"
Documentation = "https://prometheus.readthedocs.org"
Repository = "https://github.com/dnidever/prometheus"
#Issues = "https://github.com/dnidever/prometheus/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
